# ChangeLog for sci-chemistry/mgltools-scenario2
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Apr 2013; Justin Lecher <jlec@gentoo.org> mgltools-scenario2-1.5.6.ebuild:
  Correct license

  14 Apr 2013; Justin Lecher <jlec@gentoo.org> mgltools-scenario2-1.5.6.ebuild:
  Fix SRC_URI

*mgltools-scenario2-1.5.6 (12 Apr 2013)

  12 Apr 2013; Justin Lecher <jlec@gentoo.org>
  -mgltools-scenario2-1.5.6_rc2.ebuild, -mgltools-scenario2-1.5.6_rc3.ebuild,
  +mgltools-scenario2-1.5.6.ebuild:
  Version Bump; drop old

*mgltools-scenario2-1.5.6_rc3 (27 Jan 2013)

  27 Jan 2013; Justin Lecher <jlec@gentoo.org>
  +mgltools-scenario2-1.5.6_rc3.ebuild, metadata.xml:
  Version Bump; move to distutils-r1.eclass

  27 Apr 2012; Justin Lecher <jlec@gentoo.org>
  mgltools-scenario2-1.5.6_rc2.ebuild:
  Add 2.7-pypy-* to RESTRICT_PYTHON_ABIS

  07 Mar 2012; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Removed maintainer, as herd is enough

*mgltools-scenario2-1.5.6_rc2 (06 Jan 2012)

  06 Jan 2012; Justin Lecher <jlec@gentoo.org>
  +mgltools-scenario2-1.5.6_rc2.ebuild, +metadata.xml:
  Version Bump, #373679

  06 Jan 2012; Justin Lecher <jlec@gentoo.org>
  mgltools-scenario-1.5.4-r1.ebuild, metadata.xml:
  CAT move for simpy package

*mgltools-scenario-1.5.4-r1 (27 Jun 2010)

  27 Jun 2010; Justin Lecher <jlec@gentoo.org>
  -mgltools-scenario-1.5.4.ebuild, +mgltools-scenario-1.5.4-r1.ebuild:
  Python ABI fixes

*mgltools-scenario-1.5.4 (17 May 2009)

  17 May 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +mgltools-scenario-1.5.4.ebuild, +metadata.xml:
  Initial setup
