@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/mgltools-scenario2
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Mar 2015; Justin Lecher <jlec@gentoo.org> mgltools-scenario2-1.5.6.ebuild:
+  sci-chemistry/mgltools-scenario2: Drop PYTHON_MODNAME and support for
+  python2_6
 
   14 Apr 2013; Justin Lecher <jlec@gentoo.org> mgltools-scenario2-1.5.6.ebuild:
   Correct license
@@ -49,4 +53,3 @@
   17 May 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
   +mgltools-scenario-1.5.4.ebuild, +metadata.xml:
   Initial setup
-
